[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/vaniahelper/Designer.gd" type="Script" id=1]

[node name="Control" type="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 120 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Material", "Mouse", "Rect", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="ButtonNew" type="Button" parent="Control/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="ButtonLoad" type="Button" parent="Control/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_right = 86.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="ButtonClose" type="Button" parent="Control/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_right = 137.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Close"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="ButtonSave" type="Button" parent="Control/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_right = 182.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="ButtonSaveAs" type="Button" parent="Control/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 186.0
margin_right = 247.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save As"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="ButtonSaveACopy" type="Button" parent="Control/HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_right = 340.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 20 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save A Copy"
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="TabContainer" type="TabContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
tab_align = 0
tabs_visible = true
_sections_unfolded = [ "Grow Direction", "Mouse", "Size Flags" ]

[connection signal="pressed" from="Control/HBoxContainer/ButtonNew" to="." method="_on_ButtonNew_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/ButtonLoad" to="." method="_on_ButtonLoad_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/ButtonSaveAs" to="." method="_on_ButtonSaveAs_pressed"]

[connection signal="pressed" from="Control/HBoxContainer/ButtonSaveACopy" to="." method="_on_ButtonSaveACopy_pressed"]


